[package]
name = "chat_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
jwt-simple = { version = "0.12.9", features = [
    "pure-rust",
    "superboring",
], default-features = false }
anyhow = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
